--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>Spring Boot Demo</artifactId>
+	<artifactId>Spring-Boot-Demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Spring Boot Demo</name>
+	<name>Spring-Boot-Demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
